--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -671,8 +671,8 @@ en:
           multicurrency: "We couldn't process the PayPal payment because your PayPal account has not been set up to receive money in %{currency}. Go to %{paypal_url} and log in to your account to manually accept or reject the payment."
           verify: "You cannot accept this transaction because you haven't verified your PayPal account. Go to %{paypal_url} to verify your account."
           intl: "We couldn't process the PayPal payment because your PayPal account does not have a withdrawal mechanism. Go to %{paypal_url} and log in to your account to manually accept or reject the payment."
-      waiting_for_current_user_to_deliver_listing: "Waiting for you to fulfill the order for %{listing_title}"
-      waiting_for_listing_author_to_deliver_listing: "Waiting for %{listing_author_name} to fulfill the order for %{listing_title}"
+      waiting_for_current_user_to_ship_listing: "Waiting for you to fulfill the order for %{listing_title}"
+      waiting_for_listing_author_to_ship_listing: "Waiting for %{listing_author_name} to ship the order for %{listing_title}"
       request_accepted: Accepted
       request_rejected: Rejected
       request_confirmed: Completed
@@ -704,7 +704,6 @@ en:
       reject_preauthorized_offer: "Not this time"
       reject_preauthorized_request: "Not this time"
       confirm: "Mark completed"
-      cancel: Dispute
   braintree_accounts:
     new:
       add_payout_details: "Add your payout details"
